// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Skal vise ny Dashboard 1`] = `
<div
  className="flex"
>
  <svg
    aria-label="Laster innhold"
    className="spinner spinner--xl"
    focusable="false"
    height={32}
    kind="spinner"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 50 50"
    width={32}
  >
    <title>
      Venter...
    </title>
    <circle
      cx="25"
      cy="25"
      fill="none"
      r="20"
      stroke="#bdbab7"
      strokeWidth="5"
      xmlns="http://www.w3.org/2000/svg"
    />
    <circle
      cx="25"
      cy="25"
      fill="none"
      r="20"
      stroke="#7f756c"
      strokeDasharray="50 155"
      strokeLinecap="round"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Dashboard Skal vise ny Dashboard med loader 1`] = `
<div
  className="flex center"
>
  <svg
    aria-label="Laster innhold"
    className="spinner spinner--xl"
    focusable="false"
    height={32}
    kind="spinner"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 50 50"
    width={32}
  >
    <title>
      Venter...
    </title>
    <circle
      cx="25"
      cy="25"
      fill="none"
      r="20"
      stroke="#bdbab7"
      strokeWidth="5"
      xmlns="http://www.w3.org/2000/svg"
    />
    <circle
      cx="25"
      cy="25"
      fill="none"
      r="20"
      stroke="#7f756c"
      strokeDasharray="50 155"
      strokeLinecap="round"
      strokeWidth="5"
    />
  </svg>
</div>
`;
